Fixed section titles alignment

--- a/UI/components/Typography/styles.module.scss
+++ b/UI/components/Typography/styles.module.scss
@@ -1,9 +1,5 @@
 @import 'styles/utils/mixins';
 
-.typography {
-  margin: 0;
-}
-
 .boldText {
   font-weight: bold;
 }
